--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,15 @@
 ---
-name: choi Yein
+name: 곰구마
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+occupation: Software Developer
+company: -
+email: yeindev@gmail.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Goguma Developer is a frontend engineer who builds products from idea to implementation. She explores micro frontends, web performance automation, and 3D UI, with deep experience in React, TypeScript, and Tailwind, and hands-on use of Puppeteer and ClickHouse.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+She’s currently developing a Lighthouse-based performance platform for closed networks and enjoys playful side projects.
+She documents her journey on her dev blog, "Life is Sweet Potato."
