--- a/data/blog/ideas/test.mdx
+++ b/data/blog/ideas/test.mdx
@@ -1,7 +1,7 @@
 ---
-title: 아이디어노트 #이모지파티 .md file
-date: '2016-03-08'
-tags: ['ideas', 'webGL']
+title: 아이디어노트: 이모지파티
+date: '2025-06-15'
+tags: ['ideas']
 draft: true
 summary: Example of a markdown file with code blocks and syntax highlighting
 ---
